# tree-sitter-bond

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-bond.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bond/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBond/: bond.h
bindings/swift/TreeSitterBondTests/: TreeSitterBondTests.swift
queries/: highlights.scm
samples/: simple.bond
src/: grammar.json  node-types.json  parser.c
test/corpus/: basetype.txt  builtings.txt  complex.txt  enum.txt  generics.txt  namespace_after_import.txt  required-fields.txt  simple.txt  struct_view.txt  using.txt
