[package]
name = "tree-sitter-bond"
description = "Tree-sitter parser for the bond file format"
version = "0.1.0"
authors = ["Jørgen Bele Reinfjell <jorgen.bele@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bond"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jorgenbele/tree-sitter-bond"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
